update from DS (1106,1107)
版本: 1107
作者: chihwen
日期: 2013年6月4日 下午 04:08:56
訊息:
將 isMobileLimited 更名為 isSyndicateLimited 以避免誤解語意

1. 將 isMobileLimited 更名為 isSyndicateLimited 以避免誤解語意。
   syndicate 是代表是否可以把影片在非瀏覽器上 (例如手機或電視)，跟網站一起聯合發佈，指的不只是手機。
2. 微調 channel-poi.js 避免從 event type 影音，快取回 preload DOM 時，誤漏出預載畫面。
issue 6423
----
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/javascripts/channel-poi.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/curation.js

版本: 1106
作者: chihwen
日期: 2013年6月4日 下午 12:21:31
訊息:
改良 Sub-ep POI 新增模式，比照 Channel POI 盡可能快取影音定格預覽
issue 6367
----
異動 : /fakeapi/javascripts/curation.js

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4813 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -231,7 +231,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'video-info', 'By'])} <a href="http://www.youtube.com/
 </div>
 </div>
 </div>
-{{if isEmbedLimited || isZoneLimited || isMobileLimited}}
+{{if isEmbedLimited || isZoneLimited || isSyndicateLimited}}
 <ul class="play-notice">
 {{if isEmbedLimited}}
 <li class="outside">${nn._([CMS_CONF.PAGE_ID, 'video-info', 'Not playable outside Youtube'])}</li>
@@ -239,7 +239,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'video-info', 'By'])} <a href="http://www.youtube.com/
 {{if isZoneLimited}}
 <li class="region">${nn._([CMS_CONF.PAGE_ID, 'video-info', 'Not playable in some regions'])}</li>
 {{/if}}
-{{if isMobileLimited}}
+{{if isSyndicateLimited}}
 <li class="device">${nn._([CMS_CONF.PAGE_ID, 'video-info', 'Not playable on mobile device'])}</li>
 {{/if}}
 {{/if}}
@@ -884,14 +884,14 @@ ${nn._([CMS_CONF.PAGE_ID, 'episode-storyboard', 'Episode storyboard'])} (<em id=
 
 <script id="storyboard-listing-tmpl-item" type="text/x-jquery-tmpl">
 <li data-ytid="${ytId}" data-ytduration="${ytDuration}" data-starttime="${startTime}" data-endtime="${endTime}"{{if ytDuration == 0}} class="invalid"{{/if}}>
-{{if isZoneLimited || isMobileLimited}}
-{{if isZoneLimited && isMobileLimited}}
+{{if isZoneLimited || isSyndicateLimited}}
+{{if isZoneLimited && isSyndicateLimited}}
 <a href="#!pid=${id}&ytid=${ytId}" class="warning2"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([CMS_CONF.PAGE_ID, 'episode-storyboard', 'Not playable in some regions & on mobile device'])}</span></span></span></span></a>
 {{else}}
 {{if isZoneLimited}}
 <a href="#!pid=${id}&ytid=${ytId}" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([CMS_CONF.PAGE_ID, 'episode-storyboard', 'Not playable in some regions'])}</span></span></span></span></a>
 {{/if}}
-{{if isMobileLimited}}
+{{if isSyndicateLimited}}
 <a href="#!pid=${id}&ytid=${ytId}" class="warning"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([CMS_CONF.PAGE_ID, 'episode-storyboard', 'Not playable on mobile device'])}</span></span></span></span></a>
 {{/if}}
 {{/if}}
