--- a/episode-list.html
+++ b/episode-list.html
@@ -134,6 +134,38 @@
 </div>
 </script>
 
+<script id="get-url-part-tmpl" type="text/x-jquery-tmpl">
+<li class="surl-li {{if $item.li_sel === brand}}on{{/if}}" data-meta="${brand}">${brand}</li>
+</script>
+
+<script id="get-url-tmpl" type="text/x-jquery-tmpl">
+    <div class="tip-white-l">
+        <div class="left"></div>
+        <div class="center">
+            <div class="title">${nn._([CMS_CONF.PAGE_ID, 'episode-list', "Brand"])}</div> 
+            <div class="select-gray" id="">
+                <div class="select-content-gray">
+                    <p class="select-btn"></p>
+                    <p class="select-txt-gray">${brand}</p>
+                    <ul class="select-dropdown">{{html $item.li_items}}</ul>
+                </div>
+            </div>
+            <div class="title">${nn._([CMS_CONF.PAGE_ID, 'episode-list', "URL"])}</div> 
+            <div class="input-gray">
+                <p class="left"></p>
+                <p class="center">
+                    <input id="" class="textfield srul-text" value="http://www.9x9.tv/view?brand=${brand}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                </p>
+                <p class="right"></p>
+            </div>       
+        </div>
+        <div class="right"></div>
+    </div>
+    <div class="tip-bottom"></div>
+</script>
+
+
+
 <script id="episode-favorite-list-tmpl-item" type="text/x-jquery-tmpl">
 <li class="clearfix">
 <div class="container">
@@ -151,6 +183,7 @@
 <ul>
 <li><a href="javascript:void(0);" class="edit disable"><span></span>${nn._([CMS_CONF.PAGE_ID, 'episode-list', 'Edit'])}</a></li>
 <li><a href="javascript:void(0);" class="del disable"><span></span>${nn._([CMS_CONF.PAGE_ID, 'episode-list', 'Delete'])}</a></li>
+<li><a href="javascript:void(0);" class="url disable"><span></span>${nn._([CMS_CONF.PAGE_ID, 'episode-list', 'Get URL'])}</a></li>
 </ul>
 </div>
 </div>
@@ -257,6 +290,34 @@
 <div class="container-bottom">
 <div class="container-left">
 <div class="wrap">
+    <div id="get-url-${id}" class="get-url"  data-metach="${$.url().param('id')}"  data-metaep="${id}">
+        <div class="tip-white-l">
+            <div class="left"></div>
+            <div class="center">
+                <div class="title">Brand</div> 
+                <div class="select-gray" id="">
+                    <div class="select-content-gray">
+                        <p class="select-btn"></p>
+                        <p class="select-txt-gray">9x9.tv</p>
+                        <ul class="select-dropdown">
+                            <li class="on" data-meta="9x9.tv">9x9.tv</li>
+                            <li data-meta="CTS">CTS</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="title">URL</div> 
+                <div class="input-gray">
+                    <p class="left"></p>
+                    <p class="center"> 
+                        <input class="textfield srul-text" value="http://www.9x9.tv/view?brand={msoId}&ch=xxxx&ep=xxxx" onclick="this.select()" />
+                    </p>
+                    <p class="right"></p>
+                </div>       
+            </div>
+            <div class="right"></div>
+        </div>
+        <div class="tip-bottom"></div>
+    </div>
 <div class="number">${seq}</div>
 <div class="episode">
 <p class="img">
@@ -276,6 +337,7 @@
 <ul>
 <li><a href="epcurate-curation.html?id=${id}" class="edit"><span></span>${nn._([CMS_CONF.PAGE_ID, 'episode-list', 'Edit'])}</a></li>
 <li><a href="/api/episodes/${id}" rel="${id}" class="del"><span></span>${nn._([CMS_CONF.PAGE_ID, 'episode-list', 'Delete'])}</a></li>
+<li><a href="javascript:void(0);" class="url{{if null === publishDate}} disable{{/if}}"><span></span>${nn._([CMS_CONF.PAGE_ID, 'episode-list', 'Get URL'])}</a></li>
 </ul>
 </div>
 </div>
@@ -444,5 +506,7 @@
 </div>
 </div>
 
+<div id="tmpHtml2" style="display: none"></div>
+<div id="tmpHtml" style="display: none"></div>
 </body>
 </html>
