1. fix upload MSO logo limit size < 500K 2. update channel setting message 3. add Preview to portal-manage.html 4. move some function form basic.js to channel.js / episode.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4884 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-add.html
+++ b/channel-add.html
@@ -169,7 +169,7 @@
 </div>
 </div>
 <div class="fminput clearfix">
-<label>{{html nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Auto share new published episode'])}}</label>
+<label>{{html nn._([CMS_CONF.PAGE_ID, 'setting-form', 'Select brand to auto share'])}}</label>
 <div class="fmfield">
 <div class="connect-switch">
 <img src="images/icon_fb.png" alt="facebook" class="icon" />
